test/invalid/baseline/array.txt
Syntax error at line 5 in array.webidl, since `interface LotteryResults`:
  readonly attribute unsigned short[][] numbers
                                   ^ Attribute lacks a name
